<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_using_glide">Glide - Image Loading Library by Bumptech</string>
    <string name="download_using_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="download_using_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="todo">TODO</string>

    <string name="message_download">Download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="button_ok">OK</string>


    <string name="channel_name">Download</string>
    <string name="no_radio_button_clicked">Please select file to download</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>




</resources>
